PrintShop/PrintShopObjectCustomizations/main/default/objects/PrintMedia__c/PrintMedia__c.object-meta.xml
<CustomObject>
    <description>The physical customized materials and parameters used to create the products used in the services offered</description>
    <label>Print Media</label>
    <nameField>
        <displayFormat>M-{000000}</displayFormat>
        <label>Media number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Print Media</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>