PrintShop/PrintShopObjectCustomizations/main/default/objects/PrintMedia__c/fields/BindingStyle__c.field-meta.xml
<CustomField>
    <fullName>BindingStyle__c</fullName>
    <label>Binding Style</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Loose-Leaf</fullName>
            </value>
            <value>
                <fullName>Perfect</fullName>
            </value>
            <value>
                <fullName>Sprial</fullName>
            </value>
            <value>
                <fullName>Comb</fullName>
            </value>
            <value>
                <fullName>Post</fullName>
            </value>
            <value>
                <fullName>Case-Bound</fullName>
            </value>
            <value>
                <fullName>Saddle Stitch</fullName>
            </value>
            <value>
                <fullName>Stapled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>