PrintShop/PrintShopObjectCustomizations/main/default/objects/PrintMedia__c/fields/Color__c.field-meta.xml
<CustomField>
    <fullName>Color__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Will this be printed in color?</inlineHelpText>
    <label>Print Color</label>
    <type>Checkbox</type>
</CustomField>