PrintShop/PrintShopObjectCustomizations/main/default/objects/PrintMedia__c/fields/Cover_Jacket__c.field-meta.xml
<CustomField>
    <fullName>Cover_Jacket__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cover Jacket</label>
    <type>Checkbox</type>
</CustomField>