PrintShop/PrintShopObjectCustomizations/main/default/objects/PrintMedia__c/fields/Cover_Material__c.field-meta.xml
<CustomField>
    <fullName>Cover_Material__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cover Material</label>
    <referenceTo>Material__c</referenceTo>
    <relationshipLabel>Print Media</relationshipLabel>
    <relationshipName>Print_Media</relationshipName>
    <type>Lookup</type>
</CustomField>