PrintShop/PrintShopObjectCustomizations/main/default/objects/PrintMedia__c/fields/Customization_Costs__c.field-meta.xml
<CustomField>
    <fullName>Customization_Costs__c</fullName>
    <label>Customization Costs</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>