PrintShop/PrintShopObjectCustomizations/main/default/objects/PrintMedia__c/fields/PageMaterial__c.field-meta.xml
<CustomField>
    <fullName>PageMaterial__c</fullName>
    <label>Page Material</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>20# Bond</fullName>
            </value>
            <value>
                <fullName>50# Offset</fullName>
            </value>
            <value>
                <fullName>60# Offset</fullName>
            </value>
            <value>
                <fullName>70# Offset</fullName>
            </value>
            <value>
                <fullName>80# Gloss</fullName>
            </value>
            <value>
                <fullName>80# Silk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>