PrintShop/PrintShopObjectCustomizations/main/default/objects/PrintMedia__c/fields/PageSize__c.field-meta.xml
<CustomField>
    <fullName>PageSize__c</fullName>
    <label>Page Size</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A0</fullName>
            </value>
            <value>
                <fullName>A1</fullName>
            </value>
            <value>
                <fullName>A2</fullName>
            </value>
            <value>
                <fullName>A3</fullName>
            </value>
            <value>
                <fullName>A4</fullName>
            </value>
            <value>
                <fullName>A5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>