PrintShop/PrintShopObjectCustomizations/main/default/objects/PrintMedia__c/recordTypes/Pamphlet.recordType-meta.xml
<RecordType>
    <fullName>Pamphlet</fullName>
    <active>true</active>
    <label>Pamphlet</label>
</RecordType>