PrintShop/PrintShopObjectCustomizations/main/default/objects/PrintMedia__c/validationRules/Cover_Material.validationRule-meta.xml
<ValidationRule>
    <fullName>Cover_Material</fullName>
    <active>true</active>
    <errorConditionFormula>AND(RecordType.Name = &quot;Book&quot;, ISNULL( Cover_Material__c ) )</errorConditionFormula>
    <errorDisplayField>Cover_Material__c</errorDisplayField>
    <errorMessage>Cover Material is required for books</errorMessage>
</ValidationRule>